# IRS-project

./: README.md
SCA/SCA_Ibrid/: SCA_ibrid.argos  SCA_ibrid.lua  sca_ibrid_result.txt
SCA/SCA_MotorSchema/: SCA_mosche.argos  SCA_mosche.lua  sca_motorsche_result.txt
SCA/SCA_Sussunzione/: SCA_suss.argos  SCA_suss.lua  sca_suss_result.txt
SCA/src/: CMakeLists.txt  sca_loop_functions.cpp  sca_loop_functions.h
SPC/SPC_Ibrid/: SPC_ibrid.argos  SPC_ibrid.lua  spc_ibrid_result.txt
SPC/SPC_MotorSchema/: SPC_mosche.argos  SPC_mosche.lua  spc_motorsche_result.txt
SPC/SPC_Sussunzione/: SPC_suss.argos  SPC_suss.lua  luabt.lua  spc_suss_result.txt
SPC/src/: CMakeLists.txt  spc_loop_functions.cpp  spc_loop_functions.h
